# phosphor-data-sync

./: .clang-tidy  OWNERS  README.md  meson.build  meson.options
config/: README.md  meson.build
config/certs/: bmc0.cert.pem  bmc0.key.pem  bmc1.cert.pem  bmc1.key.pem  cacert.pem
config/data_sync_list/: common.json  ibm.json  open-power.json
config/rsync/: bmc0_rsyncd.conf.in  bmc1_rsyncd.conf.in  rsyncd.conf.in  rsyncd_bmc_fs.filter
config/schema/: example.json  schema.json
config/stunnel/: bmc0_stunnel.conf.in  bmc1_stunnel.conf.in  stunnel.conf.in
config/sync_socket/: common_sync_socket.cfg  ibm_sync_socket.cfg
scripts/: gen_certs.sh  gen_rsync_cfg.sh  gen_rsync_stunnel_cfg.sh  meson.build  run-ci.sh  update_sibling_bmc_ip.sh  validate_data_sync_list.py
service_files/: SyncBMCData_rsync.service  SyncBMCData_stunnel.service  meson.build  xyz.openbmc_project.Control.SyncBMCData.service  xyz.openbmc_project.DataSync.BMCData.service
src/: async_command_exec.cpp  async_command_exec.hpp  data_sync_config.cpp  data_sync_config.hpp  data_watcher.cpp  data_watcher.hpp  error_log.cpp  error_log.hpp  external_data_ifaces.cpp  external_data_ifaces.hpp  external_data_ifaces_impl.cpp  external_data_ifaces_impl.hpp  manager.cpp  manager.hpp  meson.build  notify_service.cpp  notify_service.hpp  notify_sibling.cpp  notify_sibling.hpp  persistent.cpp  persistent.hpp  rbmc_data_sync_main.cpp  sync_bmc_data_ifaces.cpp  sync_bmc_data_ifaces.hpp  utility.cpp  utility.hpp
src/datasynctool/: config_options.cpp  config_options.hpp  dbus_interactions.cpp  dbus_interactions.hpp  error_summary.cpp  error_summary.hpp  main.cpp  meson.build  utils.cpp  utils.hpp
subprojects/: googletest.wrap
test/: data_sync_config_test.cpp  full_sync_test.cpp  immediate_sync_test.cpp  manager_test.cpp  manager_test.hpp  meson.build  mock_ext_data_ifaces.hpp  notify_service_test.cpp  notify_service_test.hpp  notify_sibling_test.cpp  notify_sibling_test.hpp  periodic_sync_test.cpp  persistent_data_test.cpp  retry_test.cpp
